@@ -10,12 +10,13 @@
 #ifndef EIX__SELECTORS_H__
 #define EIX__SELECTORS_H__ 1
 
+#include <config.h>
 #include <eixTk/utils.h>
 
 #include <string>
 
-int package_selector (SCANDIR_ARG3 dent);
-int ebuild_selector (SCANDIR_ARG3 dent);
+int package_selector (SCANDIR_ARG3 dent) ATTRIBUTE_PURE;
+int ebuild_selector (SCANDIR_ARG3 dent) ATTRIBUTE_PURE;
 
 std::string::size_type ebuild_pos(const std::string &str);
 
